--- a/src/CSS/component.scss
+++ b/src/CSS/component.scss
@@ -52,7 +52,7 @@
                         }
 
                         .link__vector{
-                            margin-left: 2px;
+                            margin-left: 2%;
                         }
                     }
 
@@ -61,6 +61,7 @@
                     }
 
                     .link__vector {
+                        margin-left: 1%;
                     }
                 }
             }
